# hw-slides

./: .gitignore  LICENSE  hw-json.cabal  hw-slides.cabal  index.html  moo.html  project.sh
app/: Main.hs
app/App/Commands/: Run.hs  Types.hs
lib/js/: slides.js  svg-extension.js
output/: index.html
src/HaskellWorks/Data/: Slides.hs  StateMachine.hs
src/HaskellWorks/Prezzo/: Frame.hs  Slides.hs  StateMachine.hs  Text.hs
