cabal-version:  2.2

name:           hw-slides
version:        1.0.0.1
synopsis:       Memory efficient JSON parser
description:    Memory efficient JSON parser. Please see README.md
category:       Data
homepage:       http://github.com/haskell-works/hw-slides#readme
bug-reports:    https://github.com/haskell-works/hw-slides/issues
author:         John Ky
maintainer:     newhoggy@gmail.com
copyright:      2016 - 2019 John Ky
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/haskell-works/hw-slides

flag bmi2
  description: Enable bmi2 instruction set
  manual: False
  default: False

flag sse42
  description: Enable sse4.2 instruction set
  manual: False
  default: False

common base                 { build-depends: base                 >= 4          && < 5      }

common ansi-wl-pprint       { build-depends: ansi-wl-pprint       >= 0.6.8.2    && < 0.7    }
common array                { build-depends: array                >= 0.5        && < 0.6    }
common attoparsec           { build-depends: attoparsec           >= 0.13       && < 0.14   }
common bits-extra           { build-depends: bits-extra           >= 0.0.1      && < 0.1    }
common bytestring           { build-depends: bytestring           >= 0.10.6     && < 0.11   }
common criterion            { build-depends: criterion            >= 1.4        && < 1.6    }
common diagrams             { build-depends: diagrams             >= 1.4        && < 1.5    }
common diagrams-contrib     { build-depends: diagrams-contrib                               }
common diagrams-core        { build-depends: diagrams-core                                  }
common diagrams-lib         { build-depends: diagrams-lib                                   }
common diagrams-svg         { build-depends: diagrams-svg                                   }
common directory            { build-depends: directory            >= 1.3        &&  < 1.4   }
common dlist                { build-depends: dlist                >= 0.8        && < 0.9    }
common generic-lens         { build-depends: generic-lens                                   }
common hedgehog             { build-depends: hedgehog             >= 0.5        && < 0.7    }
common hspec                { build-depends: hspec                >= 2.4        && < 3      }
common lens                 { build-depends: lens                 >= 4          && < 5      }
common mmap                 { build-depends: mmap                 >= 0.5        && < 0.6    }
common optparse-applicative { build-depends: optparse-applicative >= 0.14       && < 0.15   }
common text                 { build-depends: text                 >= 1.2        && < 1.3    }
common transformers         { build-depends: transformers         >= 0.4        && < 0.6    }
common vector               { build-depends: vector               >= 0.12       && < 0.13   }
common word8                { build-depends: word8                >= 0.1        && < 0.2    }

common semigroups   { if impl(ghc <  8    ) { build-depends: semigroups     >= 0.16     && < 0.19 } }

common config
  default-language: Haskell2010
  ghc-options: -Wall
  if flag(sse42)
    ghc-options: -mbmi2
  if flag(bmi2) && impl(ghc >= 8.4.1)
    ghc-options: -mbmi2 -msse4.2
    cpp-options: -DBMI2_ENABLED

library
  import:   base, config
          , ansi-wl-pprint
          , array
          , attoparsec
          , bits-extra
          , bytestring
          , diagrams
          , diagrams-contrib
          , diagrams-core
          , diagrams-lib
          , diagrams-svg
          , directory
          , dlist
          , mmap
          , semigroups
          , text
          , vector
          , word8
  hs-source-dirs: src
  ghc-options: -O2 -msse4.2

  exposed-modules:
      HaskellWorks.Prezzo.Slides
    , HaskellWorks.Prezzo.StateMachine
  other-modules: Paths_hw_slides
  autogen-modules: Paths_hw_slides

executable hw-slides
  import:   base, config
          , bytestring
          , diagrams
          , diagrams-contrib
          , diagrams-core
          , diagrams-lib
          , diagrams-svg
          , dlist
          , generic-lens
          , lens
          , mmap
          , optparse-applicative
          , semigroups
          , vector
  main-is: Main.hs
  other-modules:
      App.Commands
      App.Commands.Run
      App.Commands.Types
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N -O2 -msse4.2
  build-depends:  hw-slides

test-suite hw-slides-test
  import:   base, config
          , hedgehog
          , hspec
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  build-depends:    hw-slides
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  other-modules:    Paths_hw_slides
  build-tools:      hspec-discover
